combine sec 6.2 and 6.3 int single section

--- a/testbeamreq.tex
+++ b/testbeamreq.tex
@@ -49,7 +49,7 @@ The maximum electron drift time in the TPC is about 2.2 ms. So, to minimize pile
 \label{table:beamspecs}
 \end{table}
 
-\subsection{EHN1 H4ext Beamline}
+\subsection{EHN1 H4ext Beamline and Beam Instrumentation}
 The H4ext is an extension of the existing H4 beamline in Experimental Hall North 1 (EHN1).  To produce particles in the momentum range of interest, a 60-80 GeV/c pion beam from the T2 target is used to generate tertiary beams. The tertiary particles are momentum and charge-selected and transported down H4ext beamline to the experimental area. A conceptual layout of the H4ext beamline is shown in Figure~\ref{fig:H4extPrelim}.  The top plot in Figure~\ref{fig:H4extPrelim} is the bird's eye view and the bottom plot is the side view of the beam line layout.
 %In the Figure, the cryostat for this proposal is located at the lower right hand corner of the plot (in the H4 beam line). The cryostat in the H2 beam line is for the WA105 Collaboration.
 
@@ -63,7 +63,7 @@ The H4ext is an extension of the existing H4 beamline in Experimental Hall North
 %\subsubsection{Beam Optics}
 %[Waiting for inputs from Ilias]
 
-\subsection{Beam Instrumentation}
+%\subsection{Beam Instrumentation}
 \label{beaminstrument}
 Beam instrumentation provides important information about the characteristics of the beam. It is expected that a series of detectors will be installed along the beam line to measure the particle momentum, identify particle type, and track the particle trajectory.
 
