--- a/organ.tex
+++ b/organ.tex
@@ -124,8 +124,8 @@ Cost figures are informed by component production for the 35~t detector.
 7 & Electronics & \\
 8 & DAQ & \\
 9 & computing & \\
-10 & cryostat & 2300 \\
-11 & cryogenics system & 1400 \\
+10 & cryostat &  \\   % 2300 CHF in WA105
+11 & cryogenics system &  \\  % 1400 CHF for WA105
 12 & clean room & \\
 13 & infrastructure & \\
 14 & installation \& logistics & \\
