--- a/summary.tex
+++ b/summary.tex
@@ -1,7 +1,14 @@
 \label{summary}
-The single-phase detector design that is proposed in this document has been chosen as the reference design for the first 10 kt far detector module of the DUNE experiment.  Although the single phase liquid argon technology has been successfully operated on a smaller scale, a liquid argon detector on the scale of the DUNE experiment has never been built before.  In order to mitigate risks, a CERN test of the single-phase prototype detector is a crucial milestone that will inform the construction and operation of the first 10 kt module.
+The single-phase detector design that is proposed in this document has been chosen as the reference design for the first 10~kt far detector module of the DUNE experiment.  Although the single phase liquid argon technology has been successfully operated on a smaller scale, a liquid argon detector on the scale of the DUNE experiment has never been built before.  In order to mitigate risks, a CERN test of the single-phase prototype detector is a crucial milestone that will inform the construction and operation of the first 10~kt module.
 
-A primary goal of the prototype is to perform an engineering test to validate the mechanical and electrical performance of the full-scale detector components to inform decisions that need to be made well in advance of the 2022 installation date of the first 10 kt module.  It would be of great value to also take test beam data before the long accelerator shutdown in 2018, to validate the physics performance of the detector to further inform these decisions.  However, data taken after the shutdown can still be instrumental in improving the final sensitivity of the DUNE experiment by understanding reconstruction parameters that affect the particle identification and energy reconstruction.   The experiment will have unprecedented sensitivity to CP violation in the lepton sector, the neutrino mass hierarchy, and proton decay.   
+A goal of the prototype is to perform an engineering test to validate the mechanical and electrical performance of the full-scale detector components to inform decisions that need to be made well in advance of the 2022 installation date of the first 10~kt module.  
+The primary goal of the prototype and beam test is  to validate the physics performance of the detector in response to charged particles.
+It would be of great value to take charged particle beam data before the LHC long shutdown in 2018 to further inform strategic DUNE decisions.  
+However, even beam data taken after the shutdown is instrumental in assessing systematic detector uncertainties for DUNE, validating and improving reconstruction algorithms for particle identification and energy reconstruction.  
+A charged particle beam data set represents a golden detector calibration which improves DUNE's sensitivity to its scientific goals. 
+The DUNE experiment will have unprecedented sensitivity to CP violation in the lepton sector, the neutrino mass hierarchy, and certain proton decay modes.   \\
+%
+The CERN prototype represents the cumulation of years of R\&D effort.  The technology, data acquisition, computing, and installation procedures are mature and have been tested on smaller scales.  There is a well established organization to implement the prototype program.  
 
-The CERN prototype represents the cumulation of years of R\&D effort.  The technology, data acquisition, computing, and installation procedures are mature and have been tested on smaller scales.  There is a well established organization to implement the prototype program.  The SPSC had favorable comments on the initial proposal for the prototyping of a single-phase liquid argon detector for the
-North Area facility, resulting in the request for the technical report that is presented in this document.
+%The SPSC had favorable comments on the initial proposal for the prototyping of a single-phase liquid argon detector for the
+%North Area facility, resulting in the request for the technical report that is presented in this document.
