--- a/CERNproto.tex
+++ b/CERNproto.tex
@@ -107,6 +107,7 @@
 \section{Schedule, organization and cost estimate} % [$\sim$5 pages; {\color{red} Thomas/Greg}]}
 	\input{organ}
 
+\newpage
 \section{Summary}  % [$\sim$2 pages; {\color{red} Thomas/Greg}]}
 	\input{summary}
 
