--- a/testbeamreq.tex
+++ b/testbeamreq.tex
@@ -56,7 +56,7 @@ The H4ext is an extension of the existing H4 beamline in Experimental Hall North
 \begin{figure}[h]
   \centering
 \includegraphics[scale=0.62]{figures/EHN1_H4ext.pdf}
-  \caption{A conceptual layout of the H4ext beamline. The top plot is the bird's eye view and the bottom plot is the side view of the H4ext beam line. The liquid argon cryostat for this proposal is the rectangular box in the right hand corner of both plots.  }
+  \caption{A conceptual layout of the H4ext beamline. The top plot is the bird's eye view and the bottom plot is the side view of the H4ext beam line in EHN1. The liquid argon cryostat for this proposal is the rectangular box in the right hand corner of both plots.  The beam nominally enters the TPC at an angle of about 10$^\circ$ horizontally (top plot). On the vertical plane (bottom plot), the beam enters the cryostat downward with an angle of about 6$^\circ$. Multiple beam windows will be installed on the upstream wall of the cryostat to allow the beam to enter the TPC from different positions and angles.}
   \label{fig:H4extPrelim}
 \end{figure}
 
@@ -144,8 +144,7 @@ Total  &1600&22&\multicolumn{2}{|c|}{350K}&\multicolumn{2}{|c|}{180K}\\
 \caption{A preliminary run plan for one beam angle and position. The number of spills needed for a given momentum bin is driven by the samples highlighted in red or by the requirement of at least 150 spills per momentum bin.}
 \label{tab:RunPlan}
 \end{table}
-
-The number of spills needed for each momentum bin is driven by the samples highlighted in red or by the requirement that we collect at least 150 spills ($\approx$ 2 hours of beam time) per momentum bin.  This proposed plan satisfies the requested samples as listed in Table~\ref{tab:runsum}, except for kaons less than 1 GeV. Most low momentum kaons produced from the secondary target decay before reaching the liquid argon cryostat. To obtain those samples, we will need to carry out extended runs and trigger exclusively on particles tagged as kaons by either the time-of-flight or the threshold Cherenkov counters.
+The number of spills needed for each momentum bin is driven by the samples highlighted in red. The minimum beam time requirement is 150 spills ($\approx$ 2 hours of beam time) per momentum bin to ensure we have sufficient data taken with stable beam running.  This proposed plan satisfies the requested samples as listed in Table~\ref{tab:runsum}, except for kaons less than 1 GeV. Most low momentum kaons produced from the secondary target decay before reaching the liquid argon cryostat. To obtain those samples, we will need to carry out extended runs and trigger exclusively on particles tagged as kaons by either the time-of-flight or the threshold Cherenkov counters.
 
 In addition to the above samples with beam at the nominal position, we expect to take some additional data with the beam entering the TPC at different position and angles. Without a detail beamline design, there are still some uncertainties on the actual beam rates. We are working on estimating the amount of beam time required. Based on the current information that we have, the total estimated beam time needed to carry out the physics program (physics samples as listed in Table~\ref{tab:runsum}, multiple angles and beam positions, dedicated kaon runs, etc) in this proposal is in the range of 4 to 6 weeks.
  
