--- a/detbeamtest.tex
+++ b/detbeamtest.tex
@@ -118,14 +118,14 @@ in the sub-GeV to few-GeV range provided by charged-particle test beams.
 %\label{detbeam_particles}
 The DUNE experiment will run in both neutrino and anti-neutrino 
 configurations. These beams will be composed  mainly of muon neutrinos (anti-neutrinos) as well as electron neutrinos (anti-neutrinos). In Fig.~\ref{fig:particle_momenta} the distributions of momenta and angles of particles created in neutrino interactions from 
-simulated beam fluxes, including oscillation effects, are shown. The particle rates are calculated for a 34kt far detector and  are combined from both neutrino and anti-neutrino beams.
+simulated beam fluxes, including oscillation effects, are shown. The particle rates are normalised  to the number of neutrino interactions in the DUNE far detector and for the neutrino beam.
 % In addition the electron rates from charged current interactions for muon neutrinos oscillated to electron neutrinos are shown. 
 \begin{figure}[h!]
   \centering
 \includegraphics[width=0.49\textwidth,height=6.0cm]{figures/True_Momenta_per_Particle_9_2_1_0_logy_logx} 
 \includegraphics[width=0.49\textwidth,height=6.0cm]{figures/True_theta_per_Particle_9_2_1_0_lin}
   \caption{Particle momenta (left) and angular (right) distributions for particles produced in neutrino interactions 
-from $\nu_e$, $\nu_\mu$, $\bar \nu_e$ and $\bar \nu_\mu$ at the far detector location.
+from $\nu_e$, $\nu_\mu$, $\bar \nu_e$ and $\bar \nu_\mu$ form the neutrino mode of the beam and at the far detector location.
 %{\color{red}  combine e+e-, improve information content (y-axis, change colors, etc )
 %}
 }
