Condensed text and added general infrastructure needs

--- a/nuplatform.tex
+++ b/nuplatform.tex
@@ -1,30 +1,64 @@
 \label{nuplatform}
 
-A description of construction of components, facility requirements, layout and constraints follows:
+%A description of construction of components, facility requirements, layout and constraints follows:
 
 %We propose that the cryostat be housed in the extension of the EHN1 Bat 887 at CERN, where the cryogenic system components will also be located. (moved to sec 7)
 
-\begin{itemize}
+%\begin{itemize}
 
-%short description of location and orientation of cryostat + cryogenics system in EHN1 (David)
-\item {\bf Cryostat construction:}
-The outer steel support structure reduces the time needed for the construction: the structure will be prefabricated in pieces of dimensions appropriate for transportation, shipped to the destination and only assembled in place. Fabrication will take place at the vendor's facility for the most part. This shortens the construction of the outer structure on the detector site, leaving more time for completion of the building infrastructure. If properly designed, a steel structure may allow the cryostat to be moved, should that be desired in the future.
+%short description of%location and orientation of cryostat + cryogenics system in EHN1 (David)
+%\item {\bf Cryostat construction:}
+%The outer steel support structure reduces the time needed for the construction: the structure will be prefabricated in pieces of dimensions appropriate for transportation, shipped to the destination and only assembled in place. Fabrication will take place at the vendor's facility for the most part. This shortens the construction of the outer structure on the detector site, leaving more time for completion of the building infrastructure. If properly designed, a steel structure may allow the cryostat to be moved, should that be desired in the future.
 
-\item {\bf Cryogenics construction:}
+%\item {\bf Cryogenics construction:}
+%The outer steel support structure for the cryostat will be prefabricated in pieces of dimensions appropriate for transportation, shipped to the destination and only assembled in place.  Fabrication will take place at the vendor's facility for the most part. This shortens the construction of the outer structure on the detector site, leaving more time for completion of the building infrastructure. If properly designed, a steel structure may allow the cryostat to be moved, should that be desired in the future.
 
-\item {\bf Detector component construction:} 
-TPC and PDS detector components will be manufactured and submitted to quality assurance procedures at one or more of the potential DUNE detector component production sites. Successively, components will be shipped to CERN for further testing and final assembly into the cryostat. This approach will begin the preparations for the various production sites for the first 10~kt module of the DUNE far detector.
+%\item {\bf Detector component construction:} 
+%TPC and PDS detector components will be manufactured and submitted to quality assurance procedures at one or more of the potential DUNE detector component production sites. Successively, components will be shipped to CERN for further testing and final assembly into the cryostat. This approach will begin the preparations for the various production sites for the first 10~kt module of the DUNE far detector.
 
 %\item {\bf PDS schedule items:}
 %Once the technology has been chosen the PD group will focus on optimizing the selected design with the goal of procurement and assembly taking place in late FY 2016 and early FY 2016. The photon detector paddles will then be tested and shipped to CERN in early FY 2017 for installation into the APAs in late FY 2017 in preparation for installation into the test cryostat and operation in 2018. 
 
-\item Requirements for staging space, control room, electronics racks, clean room, scaffolding, etc. (Jack)
+%\item Requirements for staging space, control room, electronics racks, clean room, scaffolding, etc. (Jack)
 
-\item power requirements and cooling 
+%\item power requirements and cooling 
 
-\item ...
+%\item ...
 
-\end{itemize}
+%\end{itemize}
 
-\input{installation}
+%\input{installation}
+
+\subsection{Installation}
+
+The outer steel support structure for the cryostat will be prefabricated in pieces of dimensions appropriate for transportation, shipped to the destination and only assembled in place.  Fabrication will take place at the vendor's facility for the most part. This shortens the construction of the outer structure on the detector site, leaving more time for completion of the building infrastructure. If properly designed, a steel structure may allow the cryostat to be moved, should that be desired in the future.
+
+The TPC and PDS detector components will be manufactured and submitted to quality assurance procedures at one or more of the potential DUNE detector component production sites. Successively, components will be shipped to CERN for further testing and final assembly into the cryostat. This approach will begin the preparations for the various production sites for the first 10~kt module of the DUNE far detector.
+
+The interior of the cryostat will be prepared prior to the installation of the TPC.  A series of I-beam support rails will be suspended below the top surface of the cryostat membrane by a series of hangers.  These hangers will be structurally supported by an independent structure above the cryostat.  Decoupling the TPC support from the cryostat structure eliminates the movement of the TPC with the flexure of the cryostat structure from the filling and internal pressure changes of the Argon inside.  The hangers will pass through the top of the cryostat to the independent structure inside a bellows type feedthrough.  These feedthroughs need to be designed to minimize the heat flow into the cryogenic volume.  For the CPAs, the support rails and hangers need to be electrically isolated due to high voltage concerns.  To preserve the ability to reverse the order of the TPC components, all of the support points will be designed to the maximum set of requirements regarding loads and clearances.  
+
+There will be a series of feedthrough flanges located along each of the support rails.  These will be cryogenic flanges where the services for the TPC components can pass through the top of the cryostat.  It is foreseen that each CPA row will require one feedthrough for the high voltage probe to bring in the drift voltage.  The drift voltage is 500 V/cm.  For a drift distance of 3.6~m and 2.5~m, the probe voltages will be 180~kV and 125~kV respectively.  There will be one service feedthrough for each of the APAs.  These feedthroughs will include high speed data connections, bias voltages for the wire planes, control and power for the cold electronics.  
+
+The main TPC components will be installed through large hatches in the top of the cryostat.  This is 
+similar to the installation method intended for the detector at the DUNE far site.  These hatches will have an 
+aperture approximately 2.0 m wide and 3.5 m long.  Each APA and CPA panel will be carefully tested after transport into the clean area and before installation into the cryostat. Immediately after a panel is installed it will be rechecked. The serial installation of the APAs along the rails means that removing and replacing one of the early panels in the row after others are installed would be very costly in effort and time. Therefore, to minimize the risk of damage, as much work around already installed panels as possible will be completed before proceeding with further panels.
+ 
+In general, APA panels will be installed in order starting with the panel furthest from the hatch side of the cryostat and progressing back towards the hatch. The upper field cage will be installed in stages as the installation of APAs and CPA progresses.  After the APAs are attached to the support rods the electrical connections will be made to electrical cables that were already dressed to the support beams and electrical testing will begin. Periodic electrical testing will continue to assure that nothing gets  damaged during the additional work around the installed APAs.  
+
+The TPC installation will be performed in three stages, each in a separate location. First, in the clean room vestibule, a crew will move the APA and CPA panels from storage racks, rotate to the vertical position and move them into the cryostat. Secondly, in the panel-staging area immediately below the equipment hatch of the cryostat, 
+% CHECK THIS! I TRIED TO INTERPRET RUSS'S COMMENTS. -- ANNE
+a second crew will transfer the panels from the crane to the staging platform, where the crew inside the cryostat will connect the panels to the rails within the cryostat. A third crew will reposition the movable scaffolding and use the scaffold to make the mechanical and electrical connections at the top for each APA and CPA as they are moved into position.  
+
+The requirements for alignment and survey of the TPC are under development. Since there are many cosmic rays in the surface detector and beam events, significant corrections can be made for any misalignment of the TPC. The current plan includes using a laser guide or optical transit and the adjustment features of the support rods for the TPC to align the top edges of the APAs in the TPC to be straight, level and parallel within a few millimeters. The alignment of the TPC in other dimensions will depend on the internal connecting features of the TPC.  The timing of the survey will depend on understanding when during the installation process the hanging TPC elements are in a dimensionally stable state. The required accuracy of the survey is not expected to be more precise than a few millimeters.  
+
+
+\subsection{Infrastructure}
+
+The inner detector and surrounding cryostat of the prototype detector will be located in a recessed pit in the floor of the extension of the EHN1 experimental hall.  However, additional space will be required for the installation and operation of the prototype.  This includes an unloading area, a clean room for assembly, and a control room to host computers to operate the detector components, readout the detector, and provide local storage of detector data.  Crane and forklift access will be required in the unloading zone and crane transport of detector components will be required between the clean room and recessed pit.  The control room will have to be accessible 24 hours a day and 7 days a week.
+
+The experiment will rely on liquid nitrogen to provide cooling power for the argon condenser and the initial cool down of the vessel and the detector.  The area will have to be setup to receive regular tanker deliveries to a local dewar storage.  A distribution facility located in the experimental hall will be used to transfer the liquid nitrogen from the dewar system.  In addition, a liquid argon receiving facility which includes a storage dewar and an ambient vaporizer will be used to deliver liquid argon and gaseous argon to the cryostat.  Because of the risk of argon collecting in the pit, an exhaust pipe out of the pit will be required to vent the area.  The humidity and temperature in the experimental area will need to be controlled by air conditioning.   
+
+The experimental hall will need to supply dedicated electrical power for the various components. These include:
+the cryogenic system ($e.g.$ pumps), front-end electronics, high voltage systems, monitor systems, computers, $etc.$
+
 
